--- a/Question9/question9.html
+++ b/Question9/question9.html
@@ -1,69 +1,20 @@
+<!-- Create a app where you have an input box and whenever a user types something in the input box and hits submit it should be added on the webpage below the input box -->
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      .navbar {
-        display: flex;
-        justify-content: space-between;
-        background-color: #f5f5f5;
-        padding: 10px;
-      }
-
-      .navbar .logo {
-        font-weight: bold;
-      }
-
-      .navbar .menu {
-        display: flex;
-      }
-
-      .navbar .menu a {
-        margin-left: 10px;
-        text-decoration: none;
-        color: #000;
-      }
-
-      @media (max-width: 600px) {
-        .navbar .menu {
-          display: none;
-        }
-
-        .navbar .hamburger {
-          display: block;
-        }
-
-        .navbar .hamburger-menu {
-          display: none;
-        }
-
-        .navbar.responsive .menu {
-          display: block;
-        }
-      }
-    </style>
     <script>
-      function toggleMenu() {
-        var navbar = document.getElementById("navbar");
-        navbar.classList.toggle("responsive");
+      function addItem() {
+        var input = document.getElementById("inputBox");
+        var newItem = document.createElement("p");
+        newItem.innerHTML = input.value;
+        document.getElementById("items").appendChild(newItem);
+        input.value = "";
       }
     </script>
   </head>
   <body>
-    <div class="navbar" id="navbar">
-      <div class="logo">Logo</div>
-      <div class="menu">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Contact</a>
-      </div>
-      <a href="#" class="hamburger" onclick="toggleMenu()">&#9776;</a>
-    </div>
-    <div class="hamburger-menu" id="hamburger-menu">
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">Contact</a>
-    </div>
+    <input type="text" id="inputBox" />
+    <button onclick="addItem()">Submit</button>
+    <div id="items"></div>
   </body>
 </html>
